--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
   <footer class="footer">
     <div id="some">
       <a id="someOne" href="https://github.com/tommirok?tab=repositories"> <i class="fa fa-github fa-3x"></i></a>
-      <a id="someTwo" href="https://www.linkedin.com/in/tommi-rokolampi-4b1464111/"> <i class="fa fa-linkedin fa-3x"></i></a>
-      <a id="someThree" href="https://www.instagram.com/tommiroko/"><i class="fa fa-instagram fa-3x"></i></a>
+      <a id="someTwo" href="https://www.linkedin.com/in/tommi-rokolampi-4b1464111/"> <i><img src="https://img.icons8.com/color/96/000000/linkedin.png"></i></a>
+      <a id="someThree" href="https://www.instagram.com/tommiroko/"><i><img src="https://img.icons8.com/color/96/000000/instagram-new.png"></i></a>
+      
     </div>
     <p id="copyright">&copy;2017 Tommi Rokolampi all rights are deserved</p>
   </footer>
