trasparent iphone image and background

--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
 
 
   <section class="sectionContainer">
-    <div class="space"></div>
-    <article class="quote">
-      <p>” My passion is expressing my self</p>
-      <p>throughout actions I make and projects I develop.</p>
-      <p>I think its the source of doing things right,</p>
-      <p>in life | in work | in hobbies ”</p>
-      ~Señor Visioner
-    </article>
+    <div>
+      <div class="space"></div>
+      <article class="quote">
+        <p>” My passion is expressing my self</p>
+        <p>throughout actions I make and projects I develop.</p>
+        <p>I think its the source of doing things right,</p>
+        <p>in life | in work | in hobbies ”</p>
+        ~Señor Visioner
+      </article>
+
+    </div>
+
   </section>
 
   <footer class="footer">
