--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: whitesmoke;">
 
 <head>
   <title>Tommi Rokolampi</title>
@@ -8,43 +8,41 @@
 
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
 
-<body class="resumecontainer">
-  <div class="header">
-    <h2>Scroll Down</h2>
-    <p>Scroll down to see the sticky effect.</p>
-  </div>
+<body class="resumecontainer" style="background-color: whitesmoke;">
+
 
   <div id="navbar">
     <nav class="navContainer">
       <a href="http://users.metropolia.fi/~tommirok">index</a>
-      <a href="http://users.metropolia.fi/~tommirok">my <i class="fas fa-poop"></i></a>
+      <a href="http://users.metropolia.fi/~tommirok">my <i class="fas fa-poo"></i></a>
       <a id="active" href="http://users.metropolia.fi/~tommirok/resume.html">resume</a>
     </nav>
-
     <div class="navDecoration"></div>
   </div>
+
   <div id="navbarPlaceHolder">
     <nav class="navContainer">
-
     </nav>
     <div></div>
   </div>
 
   <section class="sectionContainer">
     <div class="resumespace"></div>
-    <form method="post" action="download.php">
-      <input name="password" type="password" id="password" placeholder="password" required>
-      <input class="button" type="submit" name="submit" value="get resume">
-      <form />
+    <div class="iphone">
+      <form method="post" action="download.php">
+        <div class="form">
+          <input class="password" name="password" type="password" id="password" placeholder="password" required>
+          <input class="button" type="submit" name="submit" value="get resume">
+        </div>
+      </form>
+    </div>
   </section>
-
-
 
   <footer class="footer">
     <div id="some">
@@ -84,7 +82,7 @@
         navbar.classList.remove("sticky");
         navbarph.style.display = "none"
       }
-      if (window.scrollY >= 400) {
+      if (window.scrollY >= 200) {
         console.log("trgiiered")
         some.classList.add("someslide")
         some1.classList.add("someslideone")
@@ -101,7 +99,7 @@
 
 
   </script>
- 
+
 
 </body>
 
