--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <footer class="footer">
     <div id="some">
       <a id="someOne" href="https://github.com/tommirok?tab=repositories" target="_blank"> <i class="fa fa-github fa-3x"></i></a>
-      <a id="someTwo" href="https://www.linkedin.com/in/tommi-rokolampi-4b1464111/" target="_blank"> <i
+      <a id="someTwo" href="https://www.linkedin.com/in/tommi-rokolampi-%F0%9F%92%AB-4b1464111/" target="_blank"> <i
           class="fa fa-linkedin fa-3x"></i></a>
       <a id="someThree" href="https://www.instagram.com/tommiroko/" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
 
