--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="resume.css">
 
 </head>
 
@@ -20,7 +21,7 @@
   <div id="navbar">
     <nav class="navContainer">
       <a href="http://users.metropolia.fi/~tommirok">index</a>
-      <a href="http://users.metropolia.fi/~tommirok">my <i class="fas fa-poo"></i></a>
+      <a href="http://users.metropolia.fi/~tommirok/demo.html">my <i class="fas fa-poo"></i></a>
       <a id="active" href="http://users.metropolia.fi/~tommirok/resume.html">resume</a>
     </nav>
     <div class="navDecoration"></div>
