--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Tommi Rokolampi</title>
   <meta charset="utf-8" />
+  <link rel="icon" href="nosebluntti.jpg" type="image/gif" sizes="16x16">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
